# sokkia_VRS

./: CMakeLists.txt  essential_install.sh  package.xml
include/: GeoCoordConv.h  basic_serial.h
launch/: vrs_gps_driver.launch
msg/: vrs_gps.msg
src/: GeoCoordConv.cpp  basic_serial.cpp  vrs_gps_driver.cpp
usb.rulse/: usb-serial.rules
